unpackaged/objects/File__c.object
<CustomObject>
    <description>CAMS File</description>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <referenceTo>CAMS_Assignment__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CAMS_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAMS Task</label>
        <referenceTo>CAMS_Task__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doc_Id__c</fullName>
        <label>Doc Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <formula>HYPERLINK( &quot;/lightning/r/ContentDocument/&quot;  &amp;  Doc_Id__c   &amp; &quot;/view&quot;  , &quot;Download and View File&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uploaded_To__c</fullName>
        <label>Uploaded To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>File</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_File_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Name ))</errorConditionFormula>
        <errorMessage>You cannot change the file name.</errorMessage>
    </validationRules>
</CustomObject>